Fix other notification jumping issues

--- a/assets/css/less/admin/notification.less
+++ b/assets/css/less/admin/notification.less
@@ -27,6 +27,9 @@
 	.notice, .wpbdp-upgrade-bar, .wpbdp-notice {
 		display: block;
 	}
+	.wpbdp-upgrade-bar {
+		margin-left: 0;
+	}
 }
 
 .wpbdp-bell-notification {
